Fix collapse arrow

--- a/assets/blocks/course-outline/style.scss
+++ b/assets/blocks/course-outline/style.scss
@@ -22,7 +22,7 @@ $spacing: 16px;
 		margin: 0;
 		background: 0;
 		border: 0;
-		color: #FFF;
+		color: inherit;
 		flex-basis: 4%;
 		margin-left: auto;
 		cursor: pointer;
